@@ -1,3 +1,7 @@
+2009-09-21  Oliver Hader  <oliver@typo3.org>
+
+	* !!! Fixed bug #11903: Use separate tables for tags in the caching framework
+
 2009-09-20  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #11642: filelinks are now created via the typolink method
